[package]
name = "souvlaki"
version = "0.4.0"
authors = ["Sinono3 <aldoacevedo@protonmail.com>"]
edition = "2018"
description = "A cross-platform media key and metadata handling library."
repository = "https://github.com/Sinono3/souvlaki"
documentation = "https://docs.rs/souvlaki"
license = "MIT"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.3.3"
windows = "0.17.2"

[target.'cfg(target_os = "windows")'.build-dependencies]
windows = "0.17.2"

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1.6"
cocoa = "0.24.0"
core-graphics = "0.22.2"
dispatch = "0.2.0"
objc = "0.2.7"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.3"
dbus-crossroads = "0.4"

[dev-dependencies]
winit = "0.25.0"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
