[package]
name = "souvlaki"
version = "0.4.4"
authors = ["Sinono3 <aldo@aael.xyz>"]
edition = "2018"
description = "A cross-platform media key and metadata handling library."
repository = "https://github.com/Sinono3/souvlaki"
documentation = "https://docs.rs/souvlaki"
license = "MIT"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.3.3"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.29.0"
features = [
    "alloc",
	"Foundation",
	"Media",
	"Win32_Foundation",
	"Win32_System_WinRT",
	"Storage_Streams",
]

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1.6"
cocoa = "0.24.0"
core-graphics = "0.22.2"
dispatch = "0.2.0"
objc = "0.2.7"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "=2.0.0-beta.7"
zvariant = "=2.9.0"
pollster = "0.2.4"

[dev-dependencies]
winit = "0.25.0"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
